Color contrast correction

--- a/style.css
+++ b/style.css
@@ -773,11 +773,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-<<<<<<< HEAD
   background-color: #be5e46;
-=======
-  background-color: #e7662a;
->>>>>>> 26bf637dca0ee361f94e0a896fba24f4df59c5da
 }
 
 .tc-white {
@@ -785,11 +781,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-<<<<<<< HEAD
   background: #be5e46;
-=======
-  background: #e7662a;
->>>>>>> 26bf637dca0ee361f94e0a896fba24f4df59c5da
   color: #ffffff !important;
 }
 
